--- a/content/project/companyprofiledpp.mdx
+++ b/content/project/companyprofiledpp.mdx
@@ -4,21 +4,15 @@ time: "2023"
 publishedAt: "2023-12-30"
 summary: "test markdown"
 url: "https://dpp.co.id/"
-tags: ["ReactJS", "Tailwind"]
+tags:
+  - ReactJS
+  - Tailwind
 ---
 
 
 <Image 
-  src="/projects/comprodpp/landingpage.png"
+  src="/projects/companyprofiledpp/image.png"
   alt="dpp"
   width={2267}
   height={1280}
-/>
-
-<Image 
-  src="/projects/comprodpp/landingpage.png"
-  alt="dpp"
-  width={3062}
-  height={2042}
-  caption="ini website ya guys tes doang anjay slebew"
 />
